--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-tensorflow>=2.10.0
-numpy>=1.21.0
-matplotlib>=3.5.0
-scikit-image>=0.19.0
-opencv-python>=4.6.0
-segmentation-models>=1.0.1
-rasterio>=1.2.0  # For geospatial data handling
+torch>=2.0.0
+torchvision>=0.15.0
+rasterio
+segmentation-models-pytorch
+numpy
+matplotlib
+tqdm
+sentinelhub
+scikit-learn
+opencv-python
+albumentations
