--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ torch>=2.0.0
 torchvision>=0.15.0
 rasterio
 segmentation-models-pytorch
+pydantic==1.10.22
+albumentations==1.3.0
 numpy
 matplotlib
 tqdm
