Complete training script

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 .venv
 .conda
-data
 src/__pycache__
-sentinel_downloads
-visualizations
-merged
-raw_landsat
-stacked_landsat
-truth
 data
-predict
+models
+raw
